DT-1059 Added overflow hidden to wrapper to stop horizontal scroll

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -37,6 +37,7 @@
 .wrapper {
     width: 90%;
     margin: 0 5%;
+    overflow: hidden;
     @media only screen and (min-width: 1140px) {
     	width: 960px;
     	margin: 0 auto;
